# server

./: .gitignore  CMakeLists.txt  SETUP.md  build.md  conanfile.txt
src/: CMakeLists.txt
src/plugins/: game_config.cc  game_config.h  verison_mngr.cc  verison_mngr.h
src/plugins/common_info/: base_lib.cc  base_lib.h  compoment.cc  compoment.h  id_card_validator.cc  id_card_validator.h  rt_base_config.cc  rt_base_config.h
src/plugins/common_info/item/: item_info.h
src/plugins/game_modules/leaderboard_mngr/: leaderboard_mngr.cc  leaderboard_mngr.h
src/plugins/lua_config/: lua_config_accessory.cc  lua_config_accessory.h
src/plugins/message/: game_defines.h  redis_structs.h
src/plugins/mysql/: mysql_mngr.cc  mysql_mngr.h
src/plugins/player_mngr/: game_player.cc  game_player.h  player.cc  player.h  player_mngr.cc  player_mngr.h
src/plugins/player_mngr/component/: activity_player.cc  activity_player.h  campaign_player.cc  campaign_player.h  comp_player.cc  comp_player.h  role_player.cc  role_player.h  shop_player.cc  shop_player.h
src/plugins/proto/: proto_mngr.cc  proto_mngr.h
src/plugins/proto/extends/: ExBaseCmd.pb.cc  ExBaseCmd.pb.h  ExBaseMsg.pb.cc  ExBaseMsg.pb.h  ExFriendMsg.pb.cc  ExFriendMsg.pb.h  ExGameSetData.pb.cc  ExGameSetData.pb.h  ExGmtCmd.pb.cc  ExGmtCmd.pb.h  ExGmtMsg.pb.cc  ExGmtMsg.pb.h  ExItemCmd.pb.cc  ExItemCmd.pb.h  ExItemData.pb.cc  ExItemData.pb.h  ExItemMsg.pb.cc  ExItemMsg.pb.h  ExLoginCmd.pb.cc  ExLoginCmd.pb.h  ExLoginMsg.pb.cc  ExLoginMsg.pb.h  ExMail.pb.cc  ExMail.pb.h  ExMailCmd.pb.cc  ExMailCmd.pb.h  ExMessageCmd.pb.cc  ExMessageCmd.pb.h  ExMessageMsg.pb.cc  ExMessageMsg.pb.h  ExNewMessageMsg.pb.cc  ExNewMessageMsg.pb.h  ExNewRankCmd.pb.cc  ExNewRankCmd.pb.h  ExNewRankData.pb.cc  ExNewRankData.pb.h  ExNewRankMsg.pb.cc  ExNewRankMsg.pb.h  ExPlayerCmd.pb.cc  ExPlayerCmd.pb.h  (+14 more)
src/plugins/proto/proto_sri/: RoleItem.h
src/plugins/redis/: redis_mngr.cc  redis_mngr.h
src/plugins/redis/cmds/: redis_cmd_base.cc  redis_cmd_base.h  redis_cmd_flushdb.h
src/plugins/redis/cmds/hset/: redis_cmd_hgetall.cc  redis_cmd_hgetall.h  redis_cmd_hmget.cc  redis_cmd_hmget.h  redis_cmd_hmset.cc  redis_cmd_hmset.h
src/plugins/redis/cmds/script/: redis_cmd_evalsha.cc  redis_cmd_evalsha.h  redis_cmd_scriptload.cc  redis_cmd_scriptload.h
src/plugins/redis/cmds/string/: redis_cmd_exists.cc  redis_cmd_exists.h  redis_cmd_get.cc  redis_cmd_get.h  redis_cmd_incr.cc  redis_cmd_incr.h  redis_cmd_incrby.cc  redis_cmd_incrby.h  redis_cmd_setnx.cc  redis_cmd_setnx.h
src/plugins/redis/cmds/zrank/: redis_cmd_zadd.cc  redis_cmd_zadd.h  redis_cmd_zrange.cc  redis_cmd_zrange.h
src/plugins/time_mngr/: time_mngr.cc  time_mngr.h
src/services/ds_moniter/: main.cc
src/services/ds_moniter/controllers/: web_socket_connect.cc  web_socket_connect.h
src/services/game/: main.cc
src/services/game/controllers/: admin_ctrl.cc  admin_ctrl.h  mini_game_login_ctrl.cc  mini_game_login_ctrl.h  web_socket_connect.cc  web_socket_connect.h
src/services/login_version/: main.cc
src/services/login_version/controllers/: game_login_ctrl.cc  game_login_ctrl.h  game_version_ctrl.cc  game_version_ctrl.h
